# MetasequoiaImeFloatingToolWindow

./: .clangd  CMakeLists.txt  README.md
src/: main.cpp
src/d2d/: render_d2d.cpp  render_d2d.h
src/tool_window/: tool_window.cpp  tool_window.h
src/utils/: window_utils.cpp  window_utils.h
